--- a/Aula06/menu.html
+++ b/Aula06/menu.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu</title>
+    <link rel="stylesheet" href="style3.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Logo</h1>
+        <nav>
+            <li><a href="">Principal</a></li>
+            <li><a href="">Contato</a></li>
+            <li><a href="">Sobre mim</a></li>
+        </nav>
+    </header>
 </body>
 </html>
