criando plano de fundo

--- a/Aula06/ATIVIDADE 02.html
+++ b/Aula06/ATIVIDADE 02.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>margin</title>
-    <link rel="stylesheet" href="style2.css">
+    <title>Atividade</title>
+    <link rel="stylesheet" href="style09.css">
 </head>
 <body>
+    <h1>Texto abaixo:</h1>
     <p>Aqui vem um texto</p>
     <p>Outro texto</p>
     <p>Mais um texto</p>
 
 <br><br>
- <p>Qualquer coisa</p>
+<p id="Qualquercoisa">Qualquer coisa</p>
 </body>
 </html>
