--- a/Aula06/Atividade10.html
+++ b/Aula06/Atividade10.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>margin</title>
-    <link rel="stylesheet" href="style2.css">
+    <title>atividade03</title>
+    <link rel="stylesheet" href="style10.css">
 </head>
 <body>
-    <p>Aqui vem um texto</p>
-    <p>Outro texto</p>
-    <p>Mais um texto</p>
-
-<br><br>
- <p>Qualquer coisa</p>
+   <h2>Bem vindo ao meu site!</h2>
 </body>
 </html>
