--- a/aula.html
+++ b/aula.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p id="azul">Aqui vai ficar azul</p>
+    <p>"azul">Aqui vai ficar azul</p>
     <p>aqui vai ficar vermelho</p>
-    <p id="roxo">Aqui vai ficar roxo</p>
+    <p>"roxo">Aqui vai ficar roxo</p>
 </body>
 </html>
