--- a/Aula06/Exercicio/Aula01.html
+++ b/Aula06/Exercicio/Aula01.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>margin</title>
-    <link rel="stylesheet" href="style2.css">
+    <title>Exercicio</title>
+    <link rel="stylesheet" href="style01.css">
 </head>
 <body>
-    <p>Aqui vem um texto</p>
-    <p>Outro texto</p>
-    <p>Mais um texto</p>
-
-<br><br>
- <p>Qualquer coisa</p>
+    <header>
+    <h1 >Título</h1>
+    <h2 >texto alguma coisa</h2>
+    <h3">que bosta</h3>
+    <p>Bolo de morango</p>
+    </header>
 </body>
 </html>
