formulário anotações no style12

--- a/Aula06/Exercicio/Estrutura.html
+++ b/Aula06/Exercicio/Estrutura.html
@@ -45,7 +45,7 @@
 
         <ul>
           <li>Pandemia</li>
-          <li>Giri dos artistas</li>
+          <li>Giro dos artistas</li>
           <li>Bela dama</li>
         </ul>
         <br>
@@ -60,7 +60,7 @@
         <br>
        <a href="pagina02"target="blank">Clique para ir á proxima pagina02</a>
     </main>
-    
+    <br>
     <footer>
         fim
     </footer>
